intel/bench_214_new/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/log.txt
bench_214_new/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.c:151:30: error: brackets are not allowed here; to declare an array, place the brackets after the name
  GLubyte [4][4][4] srccolors;
          ~~~~~~~~~~         ^
                             [4][4][4]
1 error generated.
HLS FPGA Parse FAILED.
